[gd_scene load_steps=16 format=3 uid="uid://1e1hssj5cmiu"]

[ext_resource type="Script" path="res://script/UI/menu/result.gd" id="1_6us8b"]
[ext_resource type="FontFile" uid="uid://dmvkns7s48n77" path="res://object/font/pc_9800.ttf" id="2_4e501"]
[ext_resource type="FontFile" uid="uid://xg47m55sxhbx" path="res://object/font/pc_9800_bold.ttf" id="3_kp7th"]
[ext_resource type="Shader" path="res://shader/dither.gdshader" id="3_nggv5"]
[ext_resource type="Texture2D" uid="uid://xnwsirn8tp1p" path="res://object/syu_tatie/result_syu3.png" id="4_7fcc4"]

[sub_resource type="Theme" id="Theme_ssr74"]
default_font = ExtResource("2_4e501")

[sub_resource type="LabelSettings" id="LabelSettings_0ca75"]
font = ExtResource("3_kp7th")
font_size = 48
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.823529)
shadow_offset = Vector2(5.885, 3.3)

[sub_resource type="LabelSettings" id="LabelSettings_uwl8i"]
font = ExtResource("2_4e501")

[sub_resource type="LabelSettings" id="LabelSettings_o8mc0"]
font = ExtResource("2_4e501")

[sub_resource type="LabelSettings" id="LabelSettings_5511x"]
font = ExtResource("2_4e501")

[sub_resource type="LabelSettings" id="LabelSettings_bf0kh"]
font = ExtResource("2_4e501")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yqxea"]
shader = ExtResource("3_nggv5")
shader_parameter/intensity = 1.0

[sub_resource type="Animation" id="Animation_1uihb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ResultSyu3:material:shader_parameter/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_s25jl"]
resource_name = "tatie_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ResultSyu3:material:shader_parameter/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4d6py"]
_data = {
"RESET": SubResource("Animation_1uihb"),
"tatie_in": SubResource("Animation_s25jl")
}

[node name="result" type="Control"]
visibility_layer = 31
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_ssr74")
script = ExtResource("1_6us8b")

[node name="ColorRect5" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 385.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.843137, 0.243137, 0.156863, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.0
offset_bottom = -389.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.843137, 0.243137, 0.156863, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 628.0
offset_right = -9.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.843137, 0.243137, 0.156863, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -629.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.843137, 0.243137, 0.156863, 1)

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="clear" type="Label" parent="."]
layout_mode = 0
offset_left = -331.0
offset_top = 13.0
offset_right = -19.0
offset_bottom = 61.0
text = "STAGE CLEAR!!"
label_settings = SubResource("LabelSettings_0ca75")

[node name="score" type="Label" parent="."]
layout_mode = 2
offset_left = -134.0
offset_top = 87.0
offset_bottom = 103.0
text = "SCORE"
label_settings = SubResource("LabelSettings_uwl8i")
horizontal_alignment = 1

[node name="value" type="Label" parent="score"]
layout_mode = 1
anchors_preset = -1
offset_left = 130.0
offset_top = -1.0
offset_right = 170.0
offset_bottom = 22.0

[node name="approach" type="Label" parent="."]
layout_mode = 2
offset_left = -134.0
offset_top = 150.0
offset_bottom = 166.0
text = "接近"
label_settings = SubResource("LabelSettings_o8mc0")
horizontal_alignment = 1

[node name="value" type="Label" parent="approach"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.449
offset_left = 130.0
offset_top = -3.0
offset_right = 150.0
offset_bottom = 20.0

[node name="continue" type="Label" parent="."]
layout_mode = 2
offset_left = -134.0
offset_top = 216.0
offset_bottom = 232.0
text = "コンティニュー"
label_settings = SubResource("LabelSettings_5511x")
horizontal_alignment = 1

[node name="value" type="Label" parent="continue"]
layout_mode = 1
anchors_preset = -1
offset_left = 130.0
offset_top = -1.0
offset_right = 170.0
offset_bottom = 22.0

[node name="total" type="Label" parent="."]
layout_mode = 2
offset_left = -134.0
offset_top = 282.0
offset_bottom = 298.0
text = "TOTAL"
label_settings = SubResource("LabelSettings_bf0kh")
horizontal_alignment = 1

[node name="value" type="Label" parent="total"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 130.0
offset_top = -2.0
offset_right = 170.0
offset_bottom = -2.0
grow_vertical = 2

[node name="ResultSyu3" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_yqxea")
position = Vector2(436, 151)
scale = Vector2(0.585, 0.585)
texture = ExtResource("4_7fcc4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4d6py")
}

[node name="difficulty" type="Label" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 341.0
offset_right = 477.0
offset_bottom = 357.0

[connection signal="se_start" from="." to="." method="_on_se_start"]
[connection signal="start" from="." to="." method="_on_start"]
